[package]
name = "penguin-addition"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
katex = { version = "0.4.6", default-features = false, features = ["wasm-js"] }
arrayvec = "0.7.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["Window", "Storage", "HtmlAudioElement"] }
indexmap = { version = "2.10.0", features = ["serde"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
